# easy_slam

./: .gitignore  CMakeLists.txt  Readme.md
app/: CMakeLists.txt  run_kitti_stereo.cpp
config/: default.yaml
include/easy_slam/: algorithm.h  backend.h  camera.h  common.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  utility.h  viewer.h  visual_odometry.h
include/easy_slam/ceres_helper/: PoseOnlyReprojectionFactor.h  ReprojectionFactor.h  pose_only_reprojection_error.hpp  reprojection_error.hpp  se3_parameterization.hpp
notes/: note.plantuml
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
test/: CMakeLists.txt  test_triangulation.cpp
